<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/info">

        <EditTextPreference
            app:key="@string/name"
            app:title="@string/name"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_person_outline"
            app:defaultValue="@string/app_name"/>

        <SwitchPreferenceCompat
            app:key="@string/notifications"
            app:title="@string/notifications"
            app:defaultValue="@bool/notification_pref"
            android:icon="@drawable/ic_notifications"
            android:summary="@string/summary_noti"/>

        <Preference
            android:key="@string/change_password"
            android:title="@string/change_password"
            android:icon="@drawable/ic_security"
            android:summary="@string/summary_change_pass"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="Support">

        <Preference
            android:key="@string/check_for_updates"
            android:title="@string/check_for_updates"
            android:icon="@drawable/ic_system_update"/>

        <Preference
            android:key="@string/contact_us"
            android:title="@string/contact_us"
            android:icon="@drawable/ic_help_outline" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Misc">

        <Preference
            android:key="@string/logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_menu_logout"/>

    </PreferenceCategory>

</PreferenceScreen>
