<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_restaurant_menu"
            android:title="@string/menu_home"
            android:iconTint="@color/white"/>
        <item
            android:id="@+id/nav_your_orders"
            android:icon="@drawable/ic_menu_your_orders"
            android:title="@string/menu_your_orders"
            android:iconTint="@color/white"/>
        <item
            android:id="@+id/nav_your_cart"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/menu_cart"
            android:iconTint="@color/white"/>

        <!--<item
            android:id="@+id/nav_credits"
            android:icon="@drawable/ic_menu_credits"
            android:title="@string/menu_credits"
            android:iconTint="@color/white"/> -->

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings"
            android:iconTint="@color/white"/>

    </group>

    <item android:title="Misc" >

        <menu>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/menu_log_out"
                android:iconTint="@color/white"/>

            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/login"
                android:iconTint="@color/white"/>

        </menu>

    </item>

</menu>
